@@ -1,3 +1,6 @@
+3887.	[cleanup]	Make all static symbols in rbtdb64 end in "64" so
+			they are easier to use in a debugger. [RT #36373]
+
 	--- 9.9.6b1 released ---
 
 3885.	[port]		Use 'open()' rather than 'file()' to open files in
